force-app/main/default/objects/SR_Hedge__c/SR_Hedge__c.object-meta.xml
<CustomObject>
    <label>Hedge Trade</label>
    <nameField>
        <displayFormat>SR-{000000}</displayFormat>
        <label>SR Hedge</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hedge Trades</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>