force-app/main/default/objects/SR_Hedge__c/fields/Actual_Trading_Account__c.field-meta.xml
<CustomField>
    <fullName>Actual_Trading_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>THIS SHOULD ME MD - MAKE MD IN NEW SYSTEM</description>
    <label>Trading Account</label>
    <referenceTo>Trading_Account__c</referenceTo>
    <relationshipLabel>Hedge Trades</relationshipLabel>
    <relationshipName>Hedge_Trades</relationshipName>
    <type>Lookup</type>
</CustomField>