force-app/main/default/objects/SR_Hedge__c/fields/Breakeven_Price__c.field-meta.xml
<CustomField>
    <fullName>Breakeven_Price__c</fullName>
    <label>Breakeven Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>