force-app/main/default/objects/SR_Hedge__c/fields/Close_Screenshot__c.field-meta.xml
<CustomField>
    <fullName>Close_Screenshot__c</fullName>
    <label>Close Screenshot</label>
    <type>Url</type>
</CustomField>