force-app/main/default/objects/SR_Hedge__c/fields/Closing_Comments__c.field-meta.xml
<CustomField>
    <fullName>Closing_Comments__c</fullName>
    <label>Closing Comments</label>
    <type>TextArea</type>
</CustomField>