force-app/main/default/objects/SR_Hedge__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Currency</label>
    <referenceTo>Currency__c</referenceTo>
    <relationshipLabel>Hedge Trades</relationshipLabel>
    <relationshipName>Hedge_Trades</relationshipName>
    <type>Lookup</type>
</CustomField>