force-app/main/default/objects/SR_Hedge__c/fields/Current_Profit__c.field-meta.xml
<CustomField>
    <fullName>Current_Profit__c</fullName>
    <label>Current Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>