force-app/main/default/objects/SR_Hedge__c/fields/Cycle_Running_Profit__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Running_Profit__c</fullName>
    <label>Cycle Running Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>