force-app/main/default/objects/SR_Hedge__c/fields/Daily_SS__c.field-meta.xml
<CustomField>
    <fullName>Daily_SS__c</fullName>
    <label>Daily SS</label>
    <type>Url</type>
</CustomField>