force-app/main/default/objects/SR_Hedge__c/fields/Final_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Close_Date__c</fullName>
    <formula>if ( Number_of_Partial_Closes__c = 0,  Close_Date_Time__c ,  if ( Units_Remaining__c = 0, Latest_Partial_Date_Time__c, null) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Close Date</label>
    <type>DateTime</type>
</CustomField>