force-app/main/default/objects/SR_Hedge__c/fields/Final_Profit__c.field-meta.xml
<CustomField>
    <fullName>Final_Profit__c</fullName>
    <formula>if(  Number_of_Partial_Closes__c = 0,  X1st_Trade_Profit__c ,  Partials_Profit_Sum__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>