force-app/main/default/objects/SR_Hedge__c/fields/Final_Units_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Final_Units_Remaining__c</fullName>
    <formula>IF ( 
  Number_of_Partial_Closes__c &gt; 0,
  Units_Remaining__c,
  IF ( NOT(ISBLANK(Close_Date_Time__c)),
    0,
    X1st_Trade_Units__c 
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Units Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>