force-app/main/default/objects/SR_Hedge__c/fields/Latest_Partial_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Latest_Partial_Date_Time__c</fullName>
    <label>Latest Partial Date/Time</label>
    <summarizedField>Partial_Close__c.Close_Date_Time__c</summarizedField>
    <summaryForeignKey>Partial_Close__c.SR_Hedge__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>