force-app/main/default/objects/SR_Hedge__c/fields/Number_of_Partial_Closes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Partial_Closes__c</fullName>
    <label>Number of Partial Closes</label>
    <summaryForeignKey>Partial_Close__c.SR_Hedge__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>