force-app/main/default/objects/SR_Hedge__c/fields/Oanda_Trade_ID__c.field-meta.xml
<CustomField>
    <fullName>Oanda_Trade_ID__c</fullName>
    <externalId>true</externalId>
    <label>Oanda Trade ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>