force-app/main/default/objects/SR_Hedge__c/fields/OandaAccIdPlusTradeId__c.field-meta.xml
<CustomField>
    <fullName>OandaAccIdPlusTradeId__c</fullName>
    <externalId>true</externalId>
    <label>OandaAccIdPlusTradeId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>