force-app/main/default/objects/SR_Hedge__c/fields/Open_Comments__c.field-meta.xml
<CustomField>
    <fullName>Open_Comments__c</fullName>
    <label>Open Comments</label>
    <type>TextArea</type>
</CustomField>