force-app/main/default/objects/SR_Hedge__c/fields/Open_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Open_Date_Time__c</fullName>
    <label>Open Date/Time</label>
    <type>DateTime</type>
</CustomField>