force-app/main/default/objects/SR_Hedge__c/fields/Open_Profit__c.field-meta.xml
<CustomField>
    <fullName>Open_Profit__c</fullName>
    <label>Open Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>