force-app/main/default/objects/SR_Hedge__c/fields/Open_Screenshot__c.field-meta.xml
<CustomField>
    <fullName>Open_Screenshot__c</fullName>
    <label>Open Screenshot</label>
    <type>Url</type>
</CustomField>