force-app/main/default/objects/SR_Hedge__c/fields/Partials_Profit__c.field-meta.xml
<CustomField>
    <fullName>Partials_Profit__c</fullName>
    <label>Partials Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>