force-app/main/default/objects/SR_Hedge__c/fields/Partials_Profit_Pips__c.field-meta.xml
<CustomField>
    <fullName>Partials_Profit_Pips__c</fullName>
    <label>Partials Profit Pips</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>