force-app/main/default/objects/SR_Hedge__c/fields/Partials_Profit_Sum__c.field-meta.xml
<CustomField>
    <fullName>Partials_Profit_Sum__c</fullName>
    <label>Partials Profit (Sum)</label>
    <summarizedField>Partial_Close__c.Close_Profit__c</summarizedField>
    <summaryForeignKey>Partial_Close__c.SR_Hedge__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>