force-app/main/default/objects/SR_Hedge__c/fields/Pip_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pip_Amount__c</fullName>
    <label>Pip Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>