force-app/main/default/objects/SR_Hedge__c/fields/Pips_Profit__c.field-meta.xml
<CustomField>
    <fullName>Pips_Profit__c</fullName>
    <formula>IF ( Number_of_Partial_Closes__c &gt; 0,
  Partials_Profit_Pips__c,
  IF(
    ISPICKVAL(Side__c, &apos;BUY&apos;),
    (X1st_Trade_Close_Price__c -  X1st_Trade_Open_Price__c) * Currency__r.Pip_Size__c,
    (X1st_Trade_Open_Price__c - X1st_Trade_Close_Price__c) *  Currency__r.Pip_Size__c 
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Pips Profit</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>