force-app/main/default/objects/SR_Hedge__c/fields/Primary_Trade__c.field-meta.xml
<CustomField>
    <fullName>Primary_Trade__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Trade</label>
    <type>Checkbox</type>
</CustomField>