force-app/main/default/objects/SR_Hedge__c/fields/Profit_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Profit_Percentage__c</fullName>
    <formula>Final_Profit__c /  Balance_On_Close__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>