force-app/main/default/objects/SR_Hedge__c/fields/Side__c.field-meta.xml
<CustomField>
    <fullName>Side__c</fullName>
    <label>Side</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Side</valueSetName>
    </valueSet>
</CustomField>