force-app/main/default/objects/SR_Hedge__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>if (    ISBLANK(Final_Close_Date__c ), &apos;Open&apos;, &apos;Closed&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>