force-app/main/default/objects/SR_Hedge__c/fields/Trade_Close_Prices__c.field-meta.xml
<CustomField>
    <fullName>Trade_Close_Prices__c</fullName>
    <label>Trade Close Prices</label>
    <type>TextArea</type>
</CustomField>