force-app/main/default/objects/SR_Hedge__c/fields/Trading_Account__c.field-meta.xml
<CustomField>
    <fullName>Trading_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trading Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Hedge Trades</relationshipLabel>
    <relationshipName>Hedge_Trades</relationshipName>
    <type>Lookup</type>
</CustomField>