force-app/main/default/objects/SR_Hedge__c/fields/Units_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Units_Remaining__c</fullName>
    <label>Units Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>