force-app/main/default/objects/SR_Hedge__c/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <formula>Trading_Account__r.Account_Code__c + &apos;-&apos; +  TEXT(Oanda_Trade_ID__c)</formula>
    <label>UUID</label>
    <type>Text</type>
</CustomField>