force-app/main/default/objects/SR_Hedge__c/fields/UUID_Text__c.field-meta.xml
<CustomField>
    <fullName>UUID_Text__c</fullName>
    <externalId>true</externalId>
    <label>UUID Text</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>