force-app/main/default/objects/SR_Hedge__c/fields/X1st_Trade_Profit__c.field-meta.xml
<CustomField>
    <fullName>X1st_Trade_Profit__c</fullName>
    <label>Trade Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>