force-app/main/default/objects/SR_Hedge__c/fields/X1st_Trade_Units__c.field-meta.xml
<CustomField>
    <fullName>X1st_Trade_Units__c</fullName>
    <label>Trade Units</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>