force-app/main/default/objects/SR_Hedge__c/fields/X2nd_Trade_Open_Price__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Trade_Open_Price__c</fullName>
    <label>2nd Trade Open Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>