force-app/main/default/objects/SR_Hedge__c/fields/X2nd_Trade_Units__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Trade_Units__c</fullName>
    <label>2nd Trade Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>