force-app/main/default/objects/SR_Hedge__c/recordTypes/Share.recordType-meta.xml
<RecordType>
    <fullName>Share</fullName>
    <active>true</active>
    <label>Share</label>
</RecordType>