force-app/main/default/objects/SR_Hedge__c/recordTypes/SR_Hedge.recordType-meta.xml
<RecordType>
    <fullName>SR_Hedge</fullName>
    <active>true</active>
    <label>SR Hedge</label>
</RecordType>