force-app/main/default/objects/SR_Hedge__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>X1st_Trade_Units__c</columns>
    <columns>Side__c</columns>
    <columns>Symbol__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Open_Date_Time__c</columns>
    <columns>Status__c</columns>
    <columns>Pips_Profit__c</columns>
    <columns>Oanda_Trade_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>