force-app/main/default/objects/SR_Hedge__c/listViews/All_Calum_s.listView-meta.xml
<ListView>
    <fullName>All_Calum_s</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Symbol__c</columns>
    <columns>Units_Remaining__c</columns>
    <columns>Open_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Calum&apos;s</label>
</ListView>